--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -2,11 +2,18 @@ server:
   port: 9002
 
 database:
-  user-name: toxa
-  password: bernard94
-  host: localhost
-  port: 3306
+  user-name: ${DB_USER}
+  password: ${DB_PASSWORD}
+  host: ${DB_HOST}
+  port: ${DB_PORT}
   database-name: poker
+
+spring:
+  rabbitmq:
+    host: ${RMQ_HOST}
+    port: ${RMQ_PORT}
+    username: ${RMQ_USER}
+    password: ${RMQ_PASSWORD}
 
 logging:
   level:
