--- a/test-frontend/src/main/resources/application-local.yaml
+++ b/test-frontend/src/main/resources/application-local.yaml
@@ -1,12 +1,23 @@
-server:
-  port: 9002
-
 database:
   user-name: toxa
   password: bernard94
   host: localhost
   port: 3306
   database-name: poker
+
+discovery:
+  user-service:
+    ip: 127.0.0.1
+    port: 1504
+  game-service:
+    ip: 127.0.0.1
+    port: 1502
+  table-service:
+    ip: 127.0.0.1
+    port: 1505
+  dealer-service:
+    ip: 127.0.0.1
+    port: 1510
 
 spring:
   rabbitmq:
